--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 header {
-    background-color: #e9e9e9;
-    color: rgb(23, 107, 20);
+    background-color: #2B3649;
+    color: rgb(252, 252, 252);
 }
