tried fixing, din't work :p

--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 header {
     background-color: #2B3649;
-    color: rgb(252, 252, 252);
+    color: white;
+    display: flex;
+    justify-content: space-around;
 }
+.cabecalho.imagem {
+    width: 20%;
+}
+
